{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 11,
  "lineage": "95c6cefd-64f1-6a1e-51c0-d66ff299a331",
  "resources": [
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "agent_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/networkInterfaces/agent-vm-nic",
            "internal_domain_name_suffix": "4pq54etlz5uu5d0aidnyyciqwg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/virtualNetworks/maf-aks-vnet-prod/subnets/vm-subnet"
              }
            ],
            "location": "eastus",
            "name": "agent-vm-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "aks_rg-prod"
          },
          "dependencies": [
            "module.aks_rg.azurerm_resource_group.aks_rg",
            "module.vnet_aks.azurerm_network_security_group.aks_nsg",
            "module.vnet_aks.azurerm_subnet.aks_subnet",
            "module.vnet_aks.azurerm_subnet.vm_subnet",
            "module.vnet_aks.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/networkInterfaces/agent-vm-nic|/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/networkSecurityGroups/agentvmnsg",
            "network_interface_id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/networkInterfaces/agent-vm-nic",
            "network_security_group_id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/networkSecurityGroups/agentvmnsg"
          },
          "dependencies": [
            "module.aks_rg.azurerm_resource_group.aks_rg",
            "module.vm.azurerm_network_interface.agent_vm_nic",
            "module.vm.azurerm_network_security_group.vm_nsg",
            "module.vnet_aks.azurerm_network_security_group.aks_nsg",
            "module.vnet_aks.azurerm_subnet.aks_subnet",
            "module.vnet_aks.azurerm_subnet.vm_subnet",
            "module.vnet_aks.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/networkSecurityGroups/agentvmnsg",
            "location": "eastus",
            "name": "agentvmnsg",
            "resource_group_name": "aks_rg-prod",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aks_rg.azurerm_resource_group.aks_rg",
            "module.vnet_aks.azurerm_network_security_group.aks_nsg",
            "module.vnet_aks.azurerm_subnet.aks_subnet",
            "module.vnet_aks.azurerm_subnet.vm_subnet",
            "module.vnet_aks.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_aks",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/networkSecurityGroups/maf-aks-nsg-prod",
            "location": "eastus",
            "name": "maf-aks-nsg-prod",
            "resource_group_name": "aks_rg-prod",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aks_rg.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_aks",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/virtualNetworks/maf-aks-vnet-prod/subnets/aks-subnet",
            "name": "aks-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks_rg-prod",
            "virtual_network_name": "maf-aks-vnet-prod"
          },
          "dependencies": [
            "module.aks_rg.azurerm_resource_group.aks_rg",
            "module.vnet_aks.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_aks",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/virtualNetworks/maf-aks-vnet-prod/subnets/vm-subnet",
            "name": "vm-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks_rg-prod",
            "virtual_network_name": "maf-aks-vnet-prod"
          },
          "dependencies": [
            "module.aks_rg.azurerm_resource_group.aks_rg",
            "module.vnet_aks.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_aks",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/8"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "12ffe1f3-cf6b-4fe9-8f40-40db8c0910b6",
            "id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/virtualNetworks/maf-aks-vnet-prod",
            "location": "eastus",
            "name": "maf-aks-vnet-prod",
            "resource_group_name": "aks_rg-prod",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/23",
                "id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/virtualNetworks/maf-aks-vnet-prod/subnets/aks-subnet",
                "name": "aks-subnet"
              },
              {
                "address_prefix": "10.0.2.0/23",
                "id": "/subscriptions/9734dba5-b9e0-4249-9973-b3fb22b06d24/resourceGroups/aks_rg-prod/providers/Microsoft.Network/virtualNetworks/maf-aks-vnet-prod/subnets/vm-subnet",
                "name": "vm-subnet"
              }
            ],
            "tags": {
              "environment": "prod"
            }
          },
          "dependencies": [
            "module.aks_rg.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    }
  ]
}